<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/wallet_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/li_bottom"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/common_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:src="@drawable/common_back_btn" />

        <TextView
            android:id="@+id/common_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/backup_wallet"
            android:textColor="@android:color/darker_gray"
            android:textSize="17dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:src="@drawable/wallet_iconbackup" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/backup_wallet_start"
        android:textColor="@color/dark_gray"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/backup_wallet_detailed"
        android:textColor="@color/dark_gray" />

    <TextView
        android:id="@+id/backup_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_button_bg"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/backup_wallet"
        android:textColor="@android:color/white" />
</LinearLayout>